changed http to https for serving youtubes

--- a/_posts/2019-10-18-my-top-x.md
+++ b/_posts/2019-10-18-my-top-x.md
@@ -20,7 +20,7 @@ This blog item is about an idea to create blog pages with all top 10, 100 or wha
 
 Here are my top 10 Motivation youtube videos
 
-{% assign baseurl="http://www.youtube.com/embed/"   %}
+{% assign baseurl="https://www.youtube.com/embed/"   %}
 {% assign nbofcols = 2 %}
 {% assign colindex = 0 %}
 
